--- a/requirements.txt
+++ b/requirements.txt
@@ -17,3 +17,4 @@ sentencepiece==0.2.0
 accelerate==1.7.0
 rich==14.0.0
 python-Levenshtein==0.12.2  # Optional but improves fuzzywuzzy performance
+plotly==5.24.1
