--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,21 @@
-streamlit==1.45.1
-pandas==2.2.3
-numpy==2.2.6
-groq==0.26.0
-fuzzywuzzy==0.18.0
-sounddevice==0.5.2
-wavio==0.0.9
-faster-whisper==1.1.1
-pyaudio==0.2.14
-trafilatura==2.0.0
-transformers==4.44.2
-torch==2.4.1
-torchvision==0.19.1
-torchaudio==2.4.1
-requests==2.32.3
-sentencepiece==0.2.0
-accelerate==1.0.1
-rich==14.0.0
-python-Levenshtein==0.12.2
-plotly==5.24.1
-tokenizers==0.19.1
+streamlit
+pandas
+numpy
+groq
+fuzzywuzzy
+sounddevice
+wavio
+faster-whisper
+pyaudio
+trafilatura
+transformers
+torch
+torchvision
+torchaudio
+requests
+sentencepiece
+accelerate
+rich
+python-Levenshtein
+plotly
+tokenizers
